--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^2.1.0-preview.0",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
