--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "faker": "^5.5.3",
+    "firebase": "^9.12.1",
     "next": "latest",
+    "next-auth": "^4.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
