--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^1.0.6",
+    "dotenv": "^16.0.3",
     "faker": "^5.5.3",
     "firebase": "^9.12.1",
     "next": "latest",
     "next-auth": "^4.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-moment": "^1.1.2",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
